--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,121 +1,130 @@
-name: Playwright VNC (FullScreen Google)
+name: Debug Playwright VNC
 on: 
   workflow_dispatch:
 
 jobs:
-  browser-gui:
+  debug-browser:
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.40.0-jammy
-      options: --shm-size=2gb # 防止 Chrome 崩溃的关键
+      options: --shm-size=2gb --security-opt seccomp=unconfined
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install GUI & Tools
+      - name: Install Dependencies
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          apt-get install -y --no-install-recommends xvfb fluxbox x11vnc python3 python3-pip git net-tools curl ca-certificates
+          apt-get install -y xvfb fluxbox x11vnc python3 python3-pip git net-tools curl ca-certificates procps
           
           # 安装 noVNC
           git clone https://github.com/novnc/noVNC.git /opt/noVNC
           git clone https://github.com/novnc/websockify /opt/noVNC/utils/websockify
           ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
 
-      - name: Create Browser Script
+      - name: Setup Python Script
         run: |
-          # 创建一个 Python 脚本来精准控制浏览器启动
           cat <<EOF > run_browser.py
-          from playwright.sync_api import sync_playwright
+          import sys
           import time
+          from playwright.sync_api import sync_playwright
 
-          print("Starting Playwright...")
-          with sync_playwright() as p:
-              # 启动 Chromium，参数针对 Docker 环境优化
-              browser = p.chromium.launch(
-                  headless=False,
-                  args=[
-                      "--start-maximized",      # 最大化窗口
-                      "--no-sandbox",           # 容器内必须
-                      "--disable-setuid-sandbox",
-                      "--disable-gpu",          # 软件渲染，防止黑屏
-                      "--disable-dev-shm-usage" # 内存优化
-                  ]
-              )
-              # viewport=None 配合 start-maximized 实现真正全屏
-              context = browser.new_context(viewport=None)
-              page = context.new_page()
-              
-              print("Navigating to Google...")
-              try:
+          print("--- [PYTHON] Script started ---")
+          try:
+              with sync_playwright() as p:
+                  print("--- [PYTHON] Launching Chromium... ---")
+                  browser = p.chromium.launch(
+                      headless=False,
+                      args=[
+                          "--start-maximized",
+                          "--no-sandbox",
+                          "--disable-setuid-sandbox",
+                          "--disable-dev-shm-usage",
+                          "--disable-gpu" 
+                      ]
+                  )
+                  print("--- [PYTHON] Browser launched object created ---")
+                  
+                  context = browser.new_context(viewport=None)
+                  page = context.new_page()
+                  
+                  print("--- [PYTHON] Navigating to Google... ---")
                   page.goto("https://www.google.com")
-                  print("Page loaded!")
-              except Exception as e:
-                  print(f"Error loading page: {e}")
+                  print("--- [PYTHON] Page Title:", page.title())
+                  
+                  # 尝试截图验证
+                  page.screenshot(path="debug_screenshot.png")
+                  print("--- [PYTHON] Screenshot taken (Internal check) ---")
 
-              # 保持浏览器运行，不退出
-              while True:
-                  time.sleep(10)
+                  print("--- [PYTHON] Entering Keep-Alive Loop ---")
+                  while True:
+                      time.sleep(10)
+          except Exception as e:
+              print(f"!!! [PYTHON ERROR] !!! : {e}")
+              sys.exit(1)
           EOF
 
-      - name: Start Desktop Environment
+      - name: Start Environment (Xvfb & VNC)
         run: |
-          # 1. 启动虚拟屏幕 (1280x800)
+          # 1. 启动 Xvfb
           Xvfb :99 -screen 0 1280x800x24 &
           export DISPLAY=:99
+          echo "Xvfb started on :99"
           
-          # 2. 启动窗口管理器 (Fluxbox)
+          # 2. 启动 Fluxbox
           fluxbox &
+          echo "Fluxbox started"
           
-          # 3. 启动 VNC Server (密码: secret)
-          x11vnc -display :99 -forever -passwd secret -bg
-          
-          # 4. 启动 noVNC (6080 -> 5900)
-          /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
-          
-          # 等待端口就绪
-          echo "Waiting for noVNC..."
-          for i in {1..10}; do
-            if netstat -tuln | grep 6080; then break; fi
-            sleep 1
-          done
+          # 3. 启动 VNC
+          x11vnc -display :99 -forever -passwd secret -bg -noxdamage
+          echo "VNC Server started"
 
-      - name: Launch Browser (FullScreen)
-        run: |
-          export DISPLAY=:99
-          # 后台运行 Python 脚本启动浏览器
-          nohup python3 run_browser.py > browser.log 2>&1 &
-          echo "Browser launch command sent."
+          # 4. 启动 noVNC
+          /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
+          echo "noVNC started"
 
       - name: Start Cloudflare Tunnel
         run: |
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
-
-          # 启动隧道
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
+
+      - name: 🔴 RUN BROWSER & SHOW LOGS
+        run: |
+          export DISPLAY=:99
           
-          echo "Starting tunnel..."
-          sleep 8
+          echo "Starting python script in background..."
+          # 关键修改：直接运行并重定向输出，不使用 nohup
+          python3 run_browser.py > browser_output.txt 2>&1 &
+          PID=$!
+          echo "Python Process ID: $PID"
           
-          TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
+          echo "Waiting 10 seconds for browser to initialize..."
+          sleep 10
           
-          if [ -z "$TUNNEL_URL" ]; then
-            echo "Error: Failed to get tunnel URL. Logs:"
-            cat tunnel.log
+          echo "==================== BROWSER LOGS START ===================="
+          cat browser_output.txt
+          echo "==================== BROWSER LOGS END   ===================="
+          
+          echo "Checking active processes..."
+          ps aux | grep -E "python|chrome|playwright"
+          
+          # 如果进程死掉了，让 Action 报错退出
+          if ! kill -0 $PID 2>/dev/null; then
+            echo "❌ CRITICAL: Browser script has crashed!"
             exit 1
+          else
+            echo "✅ Browser script is still running."
           fi
 
-          VNC_URL="$TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
+      - name: Get Tunnel URL
+        run: |
+          sleep 5
+          TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
+          echo "🔗  访问地址: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
 
-          echo "=========================================================="
-          echo "🚀 远程浏览器已全屏启动！"
-          echo ""
-          echo "🔗 点击进入: $VNC_URL"
-          echo "=========================================================="
-
-      - name: Keep Alive (20 min)
+      - name: Keep Alive
         run: sleep 1200
