--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Windows RDP Crawler (Final Fix)
+name: Windows RDP Crawler (Fixed Logs)
 on: 
   workflow_dispatch:
 
@@ -62,7 +62,7 @@ jobs:
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -value 1
 
-      - name: Start Ngrok Tunnel (English Logs)
+      - name: Start Ngrok Tunnel
         shell: powershell
         env:
           NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
@@ -79,8 +79,8 @@ jobs:
           # Config Token
           .\ngrok.exe config add-authtoken $env:NGROK_AUTH_TOKEN
           
-          # Start Tunnel
-          Start-Process -FilePath ".\ngrok.exe" -ArgumentList "tcp 3389 --log=stdout" -RedirectStandardOutput ngrok.log -RedirectStandardError ngrok.log -WindowStyle Hidden -PassThru
+          # Start Tunnel (Fixed: Output to separate files)
+          Start-Process -FilePath ".\ngrok.exe" -ArgumentList "tcp 3389 --log=stdout" -RedirectStandardOutput ngrok_stdout.log -RedirectStandardError ngrok_stderr.log -WindowStyle Hidden -PassThru
           
           Write-Host "Waiting for Ngrok tunnel to initialize..."
           
@@ -91,7 +91,6 @@ jobs:
               $url = $response.tunnels[0].public_url
               if ($url) { break }
             } catch {
-              # Fixed variable syntax here: ${i}
               Write-Host "Attempt ${i}: Ngrok API not ready yet..."
               Start-Sleep -Seconds 1
             }
@@ -99,10 +98,13 @@ jobs:
 
           if (-not $url) {
             Write-Error "Failed to get tunnel URL. Ngrok might have failed to start."
-            if (Test-Path ngrok.log) {
-              Write-Host "=== Ngrok Log Content ==="
-              Get-Content ngrok.log
-            }
+            
+            Write-Host "=== Ngrok Stdout Log ==="
+            if (Test-Path ngrok_stdout.log) { Get-Content ngrok_stdout.log }
+            
+            Write-Host "=== Ngrok Stderr Log ==="
+            if (Test-Path ngrok_stderr.log) { Get-Content ngrok_stderr.log }
+            
             exit 1
           }
           
