--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,127 +1,123 @@
-name: Windows RDP Crawler (Fixed Logs)
+name: Native Chrome Stealth VNC
 on: 
   workflow_dispatch:
 
 jobs:
-  win-rdp:
-    runs-on: windows-latest
+  chrome-desktop:
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04 # 使用纯净的 Ubuntu 镜像
+      options: --shm-size=2gb --security-opt seccomp=unconfined
     
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set User Password
-        shell: powershell
-        run: |
-          $password = "SecretPass123!"
-          net user runneradmin $password
-          echo "Password set successfully."
-
-      - name: Install Python & Playwright
-        shell: powershell
-        run: |
-          pip install playwright
-          playwright install chromium
-          python -m playwright install chromium
-
-      - name: Create Python Script
-        shell: powershell
-        run: |
-          $scriptContent = @"
-          import time
-          from playwright.sync_api import sync_playwright
-
-          print('--- Starting Windows Chrome ---')
-          try:
-              with sync_playwright() as p:
-                  # Use channel='chrome' to look more like a real user
-                  browser = p.chromium.launch(headless=False, channel="chrome", args=["--start-maximized"])
-                  context = browser.new_context(viewport=None)
-                  page = context.new_page()
-                  
-                  print('--- Navigating to Google... ---')
-                  try:
-                      page.goto("https://www.google.com")
-                  except:
-                      pass
-                  
-                  print('--- Browser Ready. Waiting for RDP... ---')
-                  while True:
-                      time.sleep(10)
-          except Exception as e:
-              print(f"Error: {e}")
-              while True:
-                   time.sleep(10)
-          "@
-          Set-Content -Path run_win.py -Value $scriptContent
-
-      - name: Enable RDP Access
-        shell: powershell
-        run: |
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -value 0
-          Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -value 1
-
-      - name: Start Ngrok Tunnel
-        shell: powershell
+      - name: Install Desktop & Chrome (Native)
         env:
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+          DEBIAN_FRONTEND: noninteractive
         run: |
-          if ($env:NGROK_AUTH_TOKEN -eq "") {
-            Write-Error "Error: NGROK_AUTH_TOKEN is missing in GitHub Secrets."
-            exit 1
-          }
+          apt-get update
+          # 1. 安装基础工具和桌面环境
+          apt-get install -y wget curl git net-tools xvfb fluxbox x11vnc python3 python3-pip sudo pulseaudio
           
-          # Download Ngrok
-          Invoke-WebRequest -Uri https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
-          Expand-Archive ngrok.zip -DestinationPath . -Force
+          # 2. [关键] 安装微软常用字体 (绕过字体指纹检测)
+          apt-get install -y --no-install-recommends software-properties-common
+          echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | debconf-set-selections
+          apt-get install -y --no-install-recommends ttf-mscorefonts-installer fonts-liberation fonts-noto-color-emoji
           
-          # Config Token
-          .\ngrok.exe config add-authtoken $env:NGROK_AUTH_TOKEN
+          # 3. 下载并安装官方 Google Chrome Stable (非 Chromium)
+          wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          apt-get install -y ./google-chrome-stable_current_amd64.deb
           
-          # Start Tunnel (Fixed: Output to separate files)
-          Start-Process -FilePath ".\ngrok.exe" -ArgumentList "tcp 3389 --log=stdout" -RedirectStandardOutput ngrok_stdout.log -RedirectStandardError ngrok_stderr.log -WindowStyle Hidden -PassThru
+          # 4. 安装 noVNC
+          git clone https://github.com/novnc/noVNC.git /opt/noVNC
+          git clone https://github.com/novnc/websockify /opt/noVNC/utils/websockify
+          ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
           
-          Write-Host "Waiting for Ngrok tunnel to initialize..."
-          
-          $url = $null
-          for ($i=1; $i -le 20; $i++) {
-            try {
-              $response = Invoke-RestMethod -Uri "http://localhost:4040/api/tunnels" -ErrorAction Stop
-              $url = $response.tunnels[0].public_url
-              if ($url) { break }
-            } catch {
-              Write-Host "Attempt ${i}: Ngrok API not ready yet..."
-              Start-Sleep -Seconds 1
-            }
-          }
+          # 刷新字体缓存
+          fc-cache -f -v
 
-          if (-not $url) {
-            Write-Error "Failed to get tunnel URL. Ngrok might have failed to start."
-            
-            Write-Host "=== Ngrok Stdout Log ==="
-            if (Test-Path ngrok_stdout.log) { Get-Content ngrok_stdout.log }
-            
-            Write-Host "=== Ngrok Stderr Log ==="
-            if (Test-Path ngrok_stderr.log) { Get-Content ngrok_stderr.log }
-            
-            exit 1
-          }
-          
-          # Clean URL
-          $cleanUrl = $url -replace "tcp://", ""
-          
-          Write-Host "======================================================"
-          Write-Host "✅ Windows RDP Ready!"
-          Write-Host ""
-          Write-Host "👉 Address: $cleanUrl"
-          Write-Host "👉 Username: runneradmin"
-          Write-Host "👉 Password: SecretPass123!"
-          Write-Host ""
-          Write-Host "⚠️ Note: Make sure your Ngrok account has email verified."
-          Write-Host "======================================================"
-
-      - name: Run Browser & Keep Alive
-        shell: powershell
+      - name: Start Desktop Environment
         run: |
-          python run_win.py
+          # 启动虚拟显示器
+          Xvfb :99 -screen 0 1280x800x24 &
+          export DISPLAY=:99
+          
+          # 启动窗口管理器
+          fluxbox &
+          
+          # 启动 VNC Server
+          x11vnc -display :99 -forever -passwd secret -bg -noxdamage
+          
+          # 启动 noVNC (转 Web 访问)
+          /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
+          
+          echo "Waiting for Desktop..."
+          sleep 5
+
+      - name: Launch Native Chrome (Stealth Mode)
+        run: |
+          export DISPLAY=:99
+          
+          # 定义伪装成 Windows 10 的 User Agent
+          WIN_UA="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+          
+          # 启动 Chrome
+          # --no-sandbox: Docker 必须
+          # --disable-blink-features=AutomationControlled: 核心反爬，隐藏自动化特征
+          # --start-maximized: 全屏
+          # --user-agent: 伪装身份
+          
+          nohup google-chrome-stable \
+            --no-sandbox \
+            --disable-dev-shm-usage \
+            --start-maximized \
+            --disable-infobars \
+            --disable-blink-features=AutomationControlled \
+            --user-agent="$WIN_UA" \
+            --user-data-dir=/tmp/chrome_profile \
+            "https://bot.sannysoft.com/" > chrome.log 2>&1 &
+            
+          echo "Chrome launched via command line."
+
+      - name: Start Cloudflare Tunnel
+        run: |
+          # 使用 Cloudflare 穿透，无需验证 IP，无需配置
+          curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
+          dpkg -i cloudflared.deb
+          
+          cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
+          
+          echo "Starting Tunnel..."
+          sleep 10
+          
+          TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
+          
+          if [ -z "$TUNNEL_URL" ]; then
+            echo "❌ Failed to get tunnel URL."
+            cat tunnel.log
+            exit 1
+          fi
+
+          echo "=========================================================="
+          echo "🕵️‍♂️ 原生 Chrome 远程桌面已就绪"
+          echo ""
+          echo "🔗 访问地址 (点击即用):"
+          echo "$TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
+          echo ""
+          echo "💡 已自动打开 bot.sannysoft.com 进行指纹自测"
+          echo "=========================================================="
+
+      - name: Keep Alive (Check Chrome)
+        run: |
+          echo "Checking if Chrome is running..."
+          sleep 5
+          if pgrep chrome > /dev/null; then
+            echo "✅ Chrome is running. Keeping session alive for 20 mins..."
+            sleep 1200
+          else
+            echo "❌ Chrome crashed. Showing logs:"
+            cat chrome.log
+            exit 1
+          fi
